# scoundrel

./: .gitignore  AGENTS.md  README.md  peak_flow.yml
.github/: dependabot.yml
javascript/: AGENTS.md  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
javascript/scripts/: release-patch.js  release-patch.sh
javascript/spec/: client-stack-trace-spec.js  command-response-id-spec.js  command-wrapper-spec.js  function-argument-python-spec.js  function-argument-spec.js  reference-instance-id-spec.js  reference-release-python-spec.js  reference-release-spec.js  reference-with-proxy-python-spec.js  reference-with-proxy-spec.js  reference-with-proxy-spec.mjs  serialize-reference-spec.js  static-class-methods-spec.js  tsconfig.json  web-socket-javascript-basic-spec.js  web-socket-javascript-return-options-spec.js  web-socket-javascript-server-control-spec.js  web-socket-javascript-spec.js  web-socket-javascript-spec.mjs  web-socket-python-spec.js  web-socket-python-spec.mjs  web-socket-spec.mjs
javascript/src/: logger.js  logger.mjs  python-web-socket-runner.js  python-web-socket-runner.mjs
php/: CHANGELOG.md  composer.json  phpunit.xml
php/server/: server.php
php/src/: Json.php  Regex.php
python/: CHANGELOG.md  README.md  pyproject.toml
python/scoundrel_python/: __init__.py  scoundrel_json.py  web_socket_server.py
python/server/: web-socket.py
python/tests/: test_scoundrel_json.py  test_web_socket_server.py
ruby/: CHANGELOG.md  README.md  README_PHP.md  Rakefile  client.rb  scoundrel_ruby.gemspec
(+69 files in other folders)
