[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scoundrel-python"
version = "0.1.0"
description = "Scoundrel Python server"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scoundrel_python*"]
