[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scoundrel-python"
version = "0.1.0"
description = "Scoundrel Python server"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "websockets>=12.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<1.19",
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scoundrel_python*"]

[tool.mypy]
python_version = "3.9"
files = ["scoundrel_python", "server", "tests"]
ignore_missing_imports = true
no_site_packages = true
warn_unused_configs = true

[tool.ruff]
target-version = "py38"
line-length = 100
extend-exclude = [".venv", "scoundrel_python.egg-info"]
